# comfyui_LLM_Polymath

./: README.md  __init__.py  concept_eraser.py  config.json  flux_context_preset.py  helper.py  media_scraper.py  polymath.py  pyproject.toml  requirements.txt  test_flux_node.py  textmask.py
.github/workflows/: publish_action.yml
custom_instructions/: Cirtical Thinking and logical Reasoning.txt  Comfy Assistent.txt  Comfy Smart Assistent.txt  DSD captioning.txt  DSD instruction.txt  GPT super instructor.txt  General instructor.txt  Instruction Genius.txt  JSON Converter.txt  Python Debugger.txt  Summarizer.txt  Video-Prompter.txt  flux ClipL captioner.txt  flux T5 captioner.txt  flux prompt architect.txt  node finder.txt  slash changer.txt  ultimate photo analyzer.txt
example/: Basic_Scraper.json  Chat with Deepseek.json  Comfy Node Finder.json  Comfy Smart Assistant.json  Dataset Captioner.json  Dataset Sorter.json  Flux Auto Prompter.json  LLM Web Search.json  PolymathxGemFlash MultiRef-VTON WF.json  PolymathxGemFlash+Depth&Line.json
web/: appearance.js  flux_context_preset.js
