[project]
name = "llm_polymath"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["openai", "googlesearch-python", "requests", "bs4", "jax"]

[project.urls]
Repository = "https://github.com/lum3on/comfyui_LLM_Polymath"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lum3on"
DisplayName = "comfyui_LLM_Polymath"
Icon = ""
