[project]
name = "llm_polymath"
description = "An advanced chat node integrating LLMs, real-time web search, image handling, and image scraping. Supports APIs from OpenAI, Google, Anthropic, Grok, DeepSeek, and local Ollama. Includes custom node finder, smart assistant tools, and growing subnodes like text masking and concept eraser."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["openai", "googlesearch-python", "requests", "bs4", "jax"]

[project.urls]
Repository = "https://github.com/lum3on/comfyui_LLM_Polymath"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "lum3on"
DisplayName = "comfyui_LLM_Polymath"
Icon = "hhttps://avatars.githubusercontent.com/u/197819028?v=4"
